--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,33 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- 
+
+           |~
+           |.---.
+          .'_____`. /\
+          |~xxxxx~| ||
+          |_  #  _| ||
+     .------`-#-'-----.
+    (___|\_________/|_.`.
+     /  | _________ | | |
+    /   |/   _|_   \| | |
+   /   /X|  __|__  |/ `.|
+  (  --< \\/    _\//|_ |`.
+  `.    ~----.-~=====,:=======
+    ~-._____/___:__(``/| |
+      |    |      XX|~ | |
+       \__/======| /|  `.|
+       |_\|\    /|/_|    )
+       |_   \__/   _| .-'
+       | \ .'||`. / |(_|
+       |  ||.'`.||  |   )
+       |  `'|  |`'  |  /
+       |    |  |    |\/   Charls Fett
+
+
+    -->
+
   </body>
 </html>
